--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=SpringSecurity
 
 spring.security.user.name = aravind
 spring.security.user.password = password
+
+
+spring.h2.console.enabled = true
+spring.datasource.url = jdbc:h2:mem:test
