basic secuurity code added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=SpringSecurity
 
-spring.security.user.name = aravind
-spring.security.user.password = password
+#spring.security.user.name = aravind
+#spring.security.user.password = password
 
 
 spring.h2.console.enabled = true
