--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=SpringSecurity
-
 #spring.security.user.name = aravind
 #spring.security.user.password = password
+#spring.h2.console.enabled = true
+#spring.datasource.url = jdbc:h2:mem:test
 
 
-spring.h2.console.enabled = true
-spring.datasource.url = jdbc:h2:mem:test
+spring.datasource.url=jdbc:mysql://localhost:3306/users
+spring.datasource.username=root
+spring.datasource.password=aravind
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
